# paxcord

./: CLAUDE.md  CURRENCY.md  Cargo.toml  README.md  shell.nix
generators/: prompt_generator.perchance
scripts/: commands.lua  main.lua
src/: ai.rs  config.rs  constant.rs  currency.rs  interaction_context.rs  main.rs  markdown_chunk.rs  outputter.rs  reply_handler.rs  util.rs
src/commands/: currency.rs  execute.rs  hallucinate.rs  lua_command.rs  lua_executor.rs  lua_registry.rs  mod.rs  reload.rs
src/commands/execute/: mod.rs  slash.rs
src/commands/execute/extensions/: currency.rs  discord.rs  globals.rs  mod.rs  output_userdata.rs  perchance.rs
src/lua/: discord_extension.rs  executor.rs  mod.rs
src/lua/extensions/: comfyui.rs  globals.rs  llm.rs  mod.rs  perchance.rs
