[package]
description = "philpax's personal Discord bot"
edition = "2024"
rust-version = "1.87.0"
license = "GPL-3.0-only"
name = "paxcord"
version = "0.2.0"

[dependencies]
anyhow = "1.0.66"
async-openai = "0.28"
flume = "0.10"
mlua = { version = "=0.11.0-beta.1", features = [
    "luau",
    "anyhow",
    "async",
    "send",
    "error-send",
] }
serde = { version = "1.0.150", features = ["derive"] }
serenity = { version = "0.12.4" }
tokio = { version = "1.0", features = ["full"] }
toml = "0.7.3"
